--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -4,6 +4,9 @@
     gap: 1rem;
     margin-bottom: 1rem;
     text-align: left;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .new-expense__control label {
@@ -17,10 +20,19 @@
     padding: 0.5rem;
     border-radius: 6px;
     border: 1px solid #ccc;
-    width: 20rem;
+    width: 40rem;
+    max-width: 100%;
+}
+
+.new-expense__control select {
+    font: inherit;
+    padding: 0.5rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    width: 41.25rem;
     max-width: 100%;
 }
 
 .new-expense__actions {
-    text-align: right;
+    text-align: center;
 }
