--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,7 +1,7 @@
 .new-expense {
-    background-color: #a892ee;
-    padding: 1rem;
-    margin: 2rem auto;
+    background-color: white;
+    padding: 4rem;
+    margin: 3rem auto;
     width: 50rem;
     max-width: 95%;
     border-radius: 12px;
@@ -12,12 +12,13 @@
 .new-expense button {
     font: inherit;
     cursor: pointer;
-    padding: 1rem 2rem;
+    padding: 0.8rem 3.5rem;
     border: 1px solid #40005d;
     background-color: #40005d;
     color: white;
-    border-radius: 12px;
+    border-radius: 25px;
     margin-right: 1rem;
+    font-size: 1.2rem;
 }
 
 .new-expense button:hover,
