Nimede muutmine ja andmete muutmine

--- a/src/components/NewToDo/NewToDo.css
+++ b/src/components/NewToDo/NewToDo.css
@@ -1,4 +1,4 @@
-.new-expense {
+.new-todo {
     background-color: white;
     padding: 4rem;
     margin: 3rem auto;
@@ -9,7 +9,7 @@
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
-.new-expense button {
+.new-todo button {
     font: inherit;
     cursor: pointer;
     padding: 0.8rem 3.5rem;
@@ -21,19 +21,19 @@
     font-size: 1.2rem;
 }
 
-.new-expense button:hover,
-.new-expense button:active {
+.new-todo button:hover,
+.new-todo button:active {
     background-color: #510674;
     border-color: #510674;
 }
 
-.new-expense button.alternative {
+.new-todo button.alternative {
     color: #220131;
     border-color: transparent;
     background-color: transparent;
 }
 
-.new-expense button.alternative:hover,
-.new-expense button.alternative:active {
+.new-todo button.alternative:hover,
+.new-todo button.alternative:active {
     background-color: #ddb3f8;
 }
