--- a/src/components/NewToDo/ToDoForm.css
+++ b/src/components/NewToDo/ToDoForm.css
@@ -1,4 +1,4 @@
-.new-expense__controls {
+.new-todo__controls {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -9,13 +9,13 @@
     align-items: center;
 }
 
-.new-expense__control label {
+.new-todo__control label {
     font-weight: bold;
     margin-bottom: 0.5rem;
     display: block;
 }
 
-.new-expense__control input {
+.new-todo__control input {
     font: inherit;
     padding: 0.5rem;
     border-radius: 6px;
@@ -24,7 +24,7 @@
     max-width: 100%;
 }
 
-.new-expense__control select {
+.new-todo__control select {
     font: inherit;
     padding: 0.5rem;
     border-radius: 6px;
@@ -33,6 +33,6 @@
     max-width: 100%;
 }
 
-.new-expense__actions {
+.new-todo__actions {
     text-align: center;
 }
