--- a/src/components/ToDos/ToDoItem.css
+++ b/src/components/ToDos/ToDoItem.css
@@ -1,4 +1,4 @@
-.expense-item {
+.todo-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,7 +10,7 @@
     color: white;
 }
 
-.expense-item__description {
+.todo-item__description {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -20,7 +20,7 @@
     flex: 1;
 }
 
-.expense-item h2 {
+.todo-item h2 {
     color: #3a3a3a;
     font-size: 1rem;
     flex: 1;
@@ -28,7 +28,7 @@
     color: white;
 }
 
-.expense-item__price {
+.todo-item__price {
     font-size: 1rem;
     font-weight: bold;
     color: white;
@@ -39,18 +39,18 @@
 }
 
 @media (min-width: 580px) {
-    .expense-item__description {
+    .todo-item__description {
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
         flex: 1;
     }
 
-    .expense-item__description h2 {
+    .todo-item__description h2 {
         font-size: 1.25rem;
     }
 
-    .expense-item__price {
+    .todo-item__price {
         font-size: 1.25rem;
         padding: 0.5rem 1.5rem;
     }
