--- a/src/components/ToDos/ToDo.css
+++ b/src/components/ToDos/ToDo.css
@@ -1,7 +1,10 @@
 .todos {
-    padding: 1rem;
-    background-color: rgb(31, 31, 31);
-    margin: 2rem auto;
+    background-color: white;
+    padding: 4rem;
+    margin: 3rem auto;
     width: 50rem;
     max-width: 95%;
+    border-radius: 12px;
+    text-align: center;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
