--- a/src/components/ToDos/ToDoFilter.css
+++ b/src/components/ToDos/ToDoFilter.css
@@ -1,24 +1,33 @@
 .todos-filter {
-    color: white;
+    color: #40005d;
     padding: 0 1rem;
 }
 
 .todos-filter__control {
     display: flex;
-    width: 100%;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    margin: 1rem 0;
 }
 
 .todos-filter label {
     font-weight: bold;
     margin-bottom: 0.5rem;
+    margin-top: -3rem;
+    font-size:1rem;
 }
 
-.todos-filter select {
-    font: inherit;
-    padding: 0.5rem 3rem;
-    font-weight: bold;
-    border-radius: 6px;
+.todos-filter__buttons {
+    display: flex;
+}
+
+.todos-filter__button {
+    background-color: white;
+    border: 1px solid #822994;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 0.7rem;
+    width: 80px;
+    color: #40005d;
+    margin-top: 1rem;
 }
