--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: white;
-  padding: 0rem 2.5rem 2.5rem 2.5rem;
+  padding: 0 2.5rem 2.5rem 2.5rem;
   margin: 3rem auto;
   width: 55rem;
   max-width: 95%;
