--- a/src/components/NewTasks/NewTask.css
+++ b/src/components/NewTasks/NewTask.css
@@ -1,39 +1,39 @@
-.new-todo {
+.new-task {
     background-color: white;
-    padding: 4rem;
-    margin: 3rem auto;
+    padding: 3rem;
+    margin: 2rem auto;
     width: 50rem;
-    max-width: 100%;
+    max-width: 95%;
     border-radius: 12px;
     text-align: center;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
-.new-todo button {
+.new-task button {
     font: inherit;
     cursor: pointer;
-    padding: 0.8rem 3.5rem;
+    padding: 1rem 4rem;
     border: 1px solid #40005d;
     background-color: #40005d;
     color: white;
-    border-radius: 25px;
-    font-size: 1.2rem;
-
+    border-radius: 30px;
+    margin-right: 1rem;
+    font-size: 1.1rem;
 }
 
-.new-todo button:hover,
-.new-todo button:active {
+.new-task button:hover,
+.new-task button:active {
     background-color: #510674;
     border-color: #510674;
 }
 
-.new-todo button.alternative {
+.new-task button.alternative {
     color: #220131;
     border-color: transparent;
     background-color: transparent;
 }
 
-.new-todo button.alternative:hover,
-.new-todo button.alternative:active {
+.new-task button.alternative:hover,
+.new-task button.alternative:active {
     background-color: #ddb3f8;
 }
