--- a/src/components/Tasks/TaskItem.css
+++ b/src/components/Tasks/TaskItem.css
@@ -1,4 +1,4 @@
-.todo-item {
+.tasks-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,51 +6,37 @@
     padding: 0.5rem;
     margin: 1rem 0;
     border-radius: 12px;
-    background-color: #4b4b4b;
-    color: white;
+    background-color: #f6dbfc;
+    color: black;
 }
 
-.todo-item__description {
+.tasks-item__description {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: flex-end;
     flex-flow: column-reverse;
-    justify-content: flex-start;
+    justify-content: center;
     flex: 1;
 }
 
-.todo-item h2 {
-    color: #3a3a3a;
+.tasks-item h2 {
     font-size: 1rem;
     flex: 1;
-    margin: 0 1rem;
-}
-
-.todo-item__price {
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-    background-color: #40005d;
-    border: 1px solid white;
-    padding: 0.5rem;
-    border-radius: 12px;
+    margin: 0 6rem 0 0;
+    color: #5B005B;
+    font-weight: normal;
 }
 
 @media (min-width: 580px) {
-    .todo-item__description {
+    .tasks-item__description {
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
         flex: 1;
     }
 
-    .todo-item__description h2 {
+    .tasks-item__description h2 {
         font-size: 1.25rem;
-    }
-
-    .todo-item__price {
-        font-size: 1.25rem;
-        padding: 0.5rem 1.5rem;
     }
 }
