--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -1,7 +1,7 @@
-.todos {
+.tasks {
     background-color: white;
-    padding: 4rem;
-    margin: 3rem auto;
+    padding: 3rem;
+    margin: 2rem auto;
     width: 50rem;
     max-width: 95%;
     border-radius: 12px;
